--- a/home.html
+++ b/home.html
@@ -6,18 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to the Home Page</h1>
+  <h1>Welcome to Nev's Site</h1>
 
-  <div id="streamSection" style="margin-top:30px; display:none;">
-    <h2>Admin Streaming</h2>
-    <button id="startStreamBtn" class="button">Start Stream</button>
-    <button id="stopStreamBtn" class="button" style="display:none;">Stop Stream</button>
-    <video id="liveStream" autoplay playsinline style="width:100%; max-width:700px; margin-top:20px; border-radius:8px;"></video>
-    
-    <h3>Stream History</h3>
-    <ul id="streamList" style="list-style:none; padding:0;"></ul>
-  </div>
+  <nav>
+    <a href="home.html">Home</a> |
+    <a href="updates.html">Updates</a> |
+    <a href="music.html">Music</a> |
+    <a href="profile.html">Profile</a>
+  </nav>
 
-  <script src="home.js"></script>
+  <p>This is the landing page. Use the nav links above to explore.</p>
 </body>
 </html>
