--- a/index.html
+++ b/index.html
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Live Stream Portal</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Her Space</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Live Stream Portal</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a href="music.html">Music</a>
-      <a href="profile.html">Profile</a>
-      <a href="admin.html">Admin</a>
-    </nav>
-  </header>
+  <div class="container">
 
-  <main>
-    <section id="stream-section">
-      <h2>Live Stream</h2>
-      <button id="joinStream">Join Stream</button>
-    </section>
-
-    <section id="news-feed">
-      <h2>News Feed</h2>
-      <div id="feed"></div>
-      <input type="text" id="newPost" placeholder="Write a post...">
-      <button id="postBtn">Post</button>
-    </section>
-  </main>
-
-  <!-- Stream popup modal -->
-  <div id="streamModal" class="modal">
-    <div class="modal-content">
-      <span id="closeModal">&times;</span>
-      <video id="streamVideo" autoplay playsinline></video>
+    <!-- LOGIN -->
+    <div class="login-container">
+      <h1>Welcome</h1>
+      <input type="text" placeholder="Username" id="username">
+      <input type="password" placeholder="Password" id="password">
+      <span class="password-label">Temporary password here</span>
+      <button onclick="login()">Login</button>
     </div>
+
+    <!-- PROFILE -->
+    <div class="profile-container" id="profile-section" style="display:none;">
+      <h2>Your Profile</h2>
+      <input type="text" placeholder="Profile Name" id="profile-name">
+      <input type="text" placeholder="Bio" id="profile-bio">
+      <button onclick="saveProfile()">Save Profile</button>
+    </div>
+
+    <!-- POSTS -->
+    <div class="posts-container" id="posts-section" style="display:none;">
+      <h2>Your Posts</h2>
+      <textarea id="post-content" placeholder="Write something..."></textarea>
+      <button onclick="addPost()">Add Post</button>
+      <div id="posts-list"></div>
+    </div>
+
+    <!-- MUSIC PLAYER -->
+    <div class="music-player" id="music-section" style="display:none;">
+      <h2>Music Player</h2>
+      <input type="file" id="music-file" accept="audio/*">
+      <button onclick="addMusic()">Add Music</button>
+      <audio id="audio-player" controls></audio>
+      <div id="music-list"></div>
+    </div>
+
+    <!-- FILE UPLOADER -->
+    <div class="file-uploader" id="files-section" style="display:none;">
+      <h2>Upload Files</h2>
+      <input type="file" id="file-input">
+      <div id="uploaded-files"></div>
+    </div>
+
+    <!-- STREAM POP-UP (optional) -->
+    <button id="stream-btn" style="display:none;" onclick="openStream()">Open Stream</button>
+    <div id="stream-container" style="display:none;">
+      <video id="stream-video" autoplay playsinline></video>
+      <button onclick="closeStream()">Close Stream</button>
+    </div>
+
+    <!-- VISUALIZER -->
+    <div class="visualizer" id="visualizer-section" style="display:none;">
+      <!-- Bars will be dynamically added by JS -->
+    </div>
+
   </div>
 
   <script src="main.js"></script>
